fix dashboard display on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,7 +213,7 @@ footer {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 15px;
-    width:130px;
+    width:128px;
     height:130px;
     display:flex;
     flex-direction: column;
